<resources>
    <string name="app_name">Constraint Layout</string>
    <string name="screen_title">Details</string>
    <string name="order_name">Caramel\nFrappuccino</string>
    <string name="price">$30.00</string>
    <string name="best_sales">Best Sales</string>
    <string name="size_options">Size Options</string>
    <string name="tall">Tall</string>
    <string name="grande">Grande</string>
    <string name="venti">Venti</string>
    <string name="custom">Custom</string>
    <string name="tall_size">12 Fl Oz</string>
    <string name="grande_size">16 Fl Oz</string>
    <string name="venti_size">24 Fl Oz</string>
    <string name="custom_size">__ Fl Oz</string>
    <string name="add_button">Add to Order</string>
    <string name="minus_sign">-</string>
    <string name="cups_number">1</string>
    <string name="plus_sign">+</string>
</resources>